Issue #23450: Fix signal.set_wakeup_fd() on Windows

Detect integer overflow on the file descriptor of the socket on 64-bit Python.